new languages clarat-org/clarat#1207

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -496,6 +496,7 @@ ar:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -506,12 +507,15 @@ ar:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -541,6 +545,7 @@ ar:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -549,6 +554,7 @@ ar:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -576,6 +582,8 @@ ar:
       sort_order:
         nearby: على مقربة
         relevance: الأهمية
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -740,10 +748,12 @@ ar:
         cze: لغة تشيكية - čeština
         dan: لغة دنماركية - Dansk
         deu: لغة ألمانية - Deutsch
+        dje: زارما - Djerma
         dyu: الديولا - Julakan
         ell: لغة يونانية - ελληνικά
         eng: لغة إنجليزية - English
         est: الإستونية - eesti keel
+        ewe: إيفي - Eʋegbe
         ewo: إيفوندو - Ewondo
         fas: لغة فارسية - فارسی
         fil: لغة فلبينية - Wikang Filipino
@@ -751,6 +761,7 @@ ar:
         fra: لغة فرنسية - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: جين  - Mina
         geo: الجورجية - ქართული
         hau: لغة هوسية - Hausanci
         hbs: لغة مونتنغرية - Crnogorski jezik / Црногорски језик
@@ -854,6 +865,14 @@ ar:
             قريبا سوف نقوم بتجميع عروض مساعدات أيضا لمدن أخري. مساعدتك تسرنا:
             هل لاحظت شيئا ما؛ وترى أنه يمكننا تحسينه؟
             أو شيئا غير صحيح؟ إذن
+        popup:
+          button: نعم؛ من فضلك
+          email_placeholder: عنوان البريد الإليكتروني *
+          footer: إسمك وعنوان الإيميل الخاص بك سوف يستخدمان فقط للتواصل معك. ولن يتم إشراكك في مجموعة إخباريةولن يتم إعطاء إيميلك لطرف ثالث.
+          headline: ٢٠ يورو مقابل إبداء رأيك فينا.
+          message: Ich möchte an der Umfrage teilnehmen
+          name_placeholder: الإسم *
+          text: قل لنا ما الذي يمكننا تحسينه. أو ما الذي يعجبك. يسعدنا التواصل معك تليفونياً. هل يمكن أن نرسل لك إيميل بالتفاصيل؟
         unavailable_location_modal: |
           لموقعك يوجد في كلارات حاليا عروض مساعدات عن طريق التليفون أو الإنترنت فقط
           هذا يعني أن شخصا يساعدك عن طريق التليفون أو الإنترنت
@@ -1029,6 +1048,8 @@ ar:
       what:
         code_word: هكذا تسمى المساعدة لدى مقدم الدعم.
         heading: ما هو الموضوع؟
+        offertaxonomy:
+          heading: 
       who: أين يمكنك أن تحصل على هذه المساعدة؟
       who_contact_people:
         dr: ".د"
@@ -1110,6 +1131,7 @@ ar:
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي Me in You ل.Convenience.
+      nicole: 
       nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي Jein ل. Fettes Brot.
       omar: درس علوم الكمبيوتر. يمكنه برمجة صفحات الإنترنت بشكل جيداً وفهم الأشياء المعقدة بسرعة. في كلارات هو عضو بفريق تكنولوجيا المعلومات آي تي. أغنيته المفضلة هي Nothing Else Matters ل. Metallica.
       patrick: 'درس التاريخ والسياسة. هو يعرف الكثير خاصة عن دولة جاميكا. هو قادر على فهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث. أغنيته المفضلة هي Kingston Be Wise ل. Protoje   '
@@ -1118,6 +1140,7 @@ ar:
       sophie: درست إدارة غير ربحية. يمكنها التنظيم جيداً. كما أنها تدرك بسرعة ما هو مهم للعمل. في كلارات هي عضوة في فريق البحث. وهي تكتشف من يستخدم كلارات وكيف. أغنيتها المفضلة هي Lost ل. Frank Ocean.
       stefan: خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي Riders On The Storm ل. The Doors.
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
+      tian: 
       tine: أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد كتابة القصص. في كلارات هي عضوة في فريق البحث ومختصة بلغة كلارات. أغنيتها المفضلة هي Survive It ل. Ghostpoet.
       title: معلومات عن فريق عمل كلارات
       verena: درست علوم الأجناس. هذا يعني أنها تعرف الكثير عن الأجناس المختلفة وكذلك عن مجتمعنا. يمكنها تنسيق الأمور وترتيبها. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي Metropolis ل. Neonschwarz.
@@ -1293,6 +1316,7 @@ ar:
     haeufige-fragen: أسئلة-شائعة
     home: 
     impressum: هيئة التحرير
+    kontakt: 
     liste: القائمة
     liste-de-services: قائمة الخدمات
     new: جديد
@@ -1322,6 +1346,14 @@ ar:
           family: عندما تقوم بالنقر هنا؛ تصل إلى كلارات الأسرة. وفي كلارات الأسرة يمكنك البحث عن مساعدة للأطفال والشبان والأسر.
           refugees: عندما تقوم بالنقر هنا؛ تصل إلى كلارات اللاجئين. وفي كلارات-اللاجئين يمكنك البحث عن مساعدة للاجئين
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
