--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -614,6 +614,7 @@ ru:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -624,12 +625,15 @@ ru:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -659,6 +663,7 @@ ru:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -667,6 +672,7 @@ ru:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -694,6 +700,8 @@ ru:
       sort_order:
         nearby: Около
         relevance: Релевантность
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -859,10 +867,12 @@ ru:
         cze: Чешский язык - čeština
         dan: Датский язык - Dansk
         deu: Немецкий язык - Deutsch
+        dje: Zarma - Djerma
         dyu: Дьюла - Julakan
         ell: Греческий язык - ελληνικά
         eng: Английский язык - English
         est: эстонский - eesti keel
+        ewe: эве - Eʋegbe
         ewo: Эвондо - Эвондо
         fas: Персидский язык - فارسی
         fil: Филиппинский язык - Wikang Filipino
@@ -870,6 +880,7 @@ ru:
         fra: Французский язык - Français
         fuf: Пулар-Пулар
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: грузинский - ქართული
         hau: Хаусский язык - Hausanci
         hbs: Черногорский язык - Crnogorski jezik / Црногорски језик
@@ -973,6 +984,14 @@ ru:
             предложения для других городов. Мы будем рады твоей помощи:
             ты что-либо заметил, что нам стоит улучшить? Или что-то
             рабоатет не правильно? Тогда
+        popup:
+          button: 
+          email_placeholder: E-Mail адрес *
+          footer: 
+          headline: 
+          message: Ich möchte an der Umfrage teilnehmen
+          name_placeholder: Имя *
+          text: 
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
       nav_lang:
         legal_title: Юридический текст clarat можно читать только на немецком языке.
@@ -1140,6 +1159,8 @@ ru:
       what:
         code_word: 'Так называется помощь поставщика:'
         heading: О чем это?
+        offertaxonomy:
+          heading: 
       who: Где получит помощь?
       who_contact_people:
         dr: Доктор
@@ -1174,7 +1195,7 @@ ru:
     about:
       amina: Амина - социолог. Она много знает об обществе. Она быстро замечает самое важное. В clarat она работает в команде сбора информации. Она решает, как именно будет clarat помогать. Ее любимая песня - La Prima Estate Эрленда Ойа (Erlend Oye).
       andrea: Андреа изучала международный менеджмент. Она многое знает об экономике и культуре. Она работает очень педантично. В clarat она работает в исследовательской команде. Она следит за качеством работы нашей команды. Ее любимая песня Work Me от The Black Keys.
-      anja: ''
+      anja: 
       ann-sophie: 
       anna: Она - филолог. Это значит, что она много знает о языках. Кроме того, она знает толк в литературе. Она хорошо разбирается в сложных вещах. В clarat она работает в исследовательской команде. Её любимая песня - 1009 группы Bonobo.
       anne: Она изучала экономику и международные отношения. Она может очень быстро думать логически. Она главная в clarat. Она заботится о всей команде и все организует. Ее любимая песня - Denken Sie Groß группы Deichkind.
@@ -1219,6 +1240,7 @@ ru:
       michaela: Она изучала экономическую информатику. Она может воодушевлять других людей. И она хорошо разбирается в новых СМИ. В clarat она работает в исследовательской группе и обеспечивает хорошую работу нашего сайта. Ее любимая песня — Digital Love от Daft Punk.
       nahla: Она археолог. Он много знает об истории людей. Он может быстро работать. В clatrat она работает в команде переводчиков и переводит clarat на арабский язык.  Ее любимая песня — Nassam Allina El Hawa от Fayrouz.
       nathalie: Она изучала права человека и международные политические исследования. Она умеет хорошо объяснять. И хорошо слушать. В Clarat она работает в исследовательской команде. Её любимая песня - Me in You от Kings of Convenience.
+      nicole: 
       nils: Нильс Специалист по информатике. Это значит, что он хорошо умеет программировать компьютерные программы и сайты в интернете. Он хорошо решает проблемы и быстро осваивает новые вещи. В clarat он работает команде технической информации. Его любимая песня Jein от группы Фэттэс Брот (Fettes Brot).
       omar: 
       patrick: 
@@ -1227,6 +1249,7 @@ ru:
       sophie: Имеет Некоммерческая управления изучены. Вы можете организовать быстро и хорошо понимают, что важно. В Clarat он находится в исследовательской группе. И она узнает, кто Clarat таких видов применения. Моя любимая песня утрачивается Frank океана.
       stefan: Он - культуролог. Это значит, что он знает много о культуре и обществе. Он умеет вдохновлять людей. Он - один из учредителей clarat. Его любимая песня - Riders in The Storm от The Doors.
       text: 'clarat это проект некоммерческого фонда Benckiser Stiftung Zukunft (фонд Бенкизер, Будущее) - www.benckiser-stiftung.org. Вместе с этим фондом уже несколько лет мы содействуем в продвижении проектов для детей и молодежи. При этом мы снова и снова обращали внимание на одну вещь: довольно тяжело найти какие возможности поддержки и помощи в целом существуют и трудно в них разобраться. Тогда мы поняли, что если для нас, "экспертов" тяжело найти и понять это, то каково детям, молодежи, семьям, которым действительно нужна помощь? Либо беженцам, которые здесь, в Германии еще вовсе не освоились? На это есть один ответ: очень сложно! Так и родилась идея создать clarat: возможность легко найти помощь. Для семей - в clarat family и для беженцев - в clarat refugee.'
+      tian: 
       tine: Она - социальный педагог. Она умеет выслушивать людей. Кроме того, она - писатель. Это значит, что она хорошо владеет языком и пишет хорошие истории. В clarat она работает в исследовательской команде. Её любимая песня Survive от Ghostpoet.
       title: Über Uns
       verena: Оан изучала гендерные исследования. Это значит, что она много знает о разных гендерах и о нашем обществе. Она хорошо организовывает. В clarat она работает в исследовательской команде . Её любимая песня - Metropolis отNeonschwarz.
@@ -1398,6 +1421,7 @@ ru:
     haeufige-fragen: Частые-вопросы
     home: главная страница
     impressum: Импрессум
+    kontakt: 
     liste: список
     liste-de-services: список-услуг
     new: новый
@@ -1427,6 +1451,14 @@ ru:
           family: Если ты нажмешь сюда, то перейдешь к clarat Family. В clarat Family ты найдешь помощь для детей, молодежи и семей.
           refugees: Если ты нажмешь сюда, то перейдешь к clarat Refugees. В clarat Refugees ты найдешь помощь для беженцев.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
