--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -960,6 +960,7 @@ de:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -970,12 +971,15 @@ de:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -1005,6 +1009,7 @@ de:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -1013,6 +1018,7 @@ de:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -1040,6 +1046,8 @@ de:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -1225,10 +1233,12 @@ de:
         cze: Tschechisch - čeština
         dan: Dänisch - Dansk
         deu: Deutsch
+        dje: Zarma - Djerma
         dyu: Dioula - Julakan
         ell: Griechisch - ελληνικά
         eng: Englisch - English
         est: Estnisch - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Ewondo - Ewondo
         fas: Persisch (Farsi) - فارسی
         fil: Filipino - Wikang Filipino
@@ -1236,6 +1246,7 @@ de:
         fra: Französisch - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: Georgisch - ქართული
         hau: Hausa - Hausanci
         hbs: Montenegrinisch - Crnogorski jezik / Црногорски језик
@@ -1339,6 +1350,14 @@ de:
             Hilfsangebote für andere Städte. Über deine Hilfe freuen wir uns:
             Hast du etwas gesehen, das wir besser machen können? Oder
             funktioniert etwas nicht richtig? Dann
+        popup:
+          button: Ja, bitte
+          email_placeholder: E-Mail-Adresse *
+          footer: "* Dein Name und deine E-Mail-Adresse werden ausschließlich zur Kontaktaufnahme verarbeitet. Du abonnierst keinen Newsletter und deine E-Mail-Adresse wird nicht an Dritte weitergegeben."
+          headline: 20 Euro für deine Meinung
+          message: Ich möchte an der Umfrage teilnehmen
+          name_placeholder: Name *
+          text: Sag uns, was wir verbessern können. Oder was dir gut gefällt. Gern würden wir dazu mit dir telefonieren. Dürfen wir dir eine E-Mail mit den Details schicken?
         unavailable_location_modal: |
           Für deinen Standort gibt es bei clarat aktuell nur Telefon-Angebote
           oder Online-Angebote. Das heißt, man hilft dir am Telefon oder online.
@@ -1505,6 +1524,8 @@ de:
       what:
         code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Worum geht's?
+        offertaxonomy:
+          heading: 'Mit diesen Themen kennen sich die Mitarbeiter aus:'
       who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
@@ -1611,12 +1632,13 @@ de:
       nathalie: 'Hat Menschenrechte und internationale Politik studiert. Sie kann gut erklären. Und gut zuhören. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist Me in You von Kings of Convenience.
 
 '
+      nicole: Hat Ungarisch studiert. Und sie kann gut Webseiten programmieren. Sie hat immer schnell eine Idee, wie man ein Problem lösen kann. Bei clarat ist sie im IT-Team. Ihr Lieblingssong ist Disorder von Joy Division.
       nils: |
         Ist Informatiker. Das heißt, er kann gut Computerprogramme und
         Internetseiten programmieren. Ihm fällt immer eine gute Lösung ein und
         er lernt schnell. Bei clarat ist er im IT-Team. Sein Lieblingssong ist
         Jein von Fettes Brot.
-      omar: Hat Computer-Ingenieurwesen studiert. Er kann gut Internetseiten programmieren und schnell komplizierte Dinge verstehen. Bei clarat ist er im IT-Team. Sein Lieblingssong ist Nothing Else Matters von Metallica.
+      omar: Hat Computer-Ingenieurwesen studiert. Er kann gut programmieren und schnell komplizierte Dinge verstehen. Bei clarat ist er im Marketing-Team. Sein Lieblingssong ist Nothing Else Matters von Metallica.
       patrick: Hat Geschichte und Politik studiert. Er weiß besonders viel über das Land Jamaika. Er kann gut komplizierte Dinge verstehen. Bei clarat ist er im Research-Team. Sein Lieblingssong ist Kingston Be Wise von Protoje.
       philipp: Hat Geschichte, Politik und Recht studiert. Er kann gut komplizierte Sachen verstehen. Bei clarat ist er im Research-Team. Und er sorgt dafür, dass wir gut arbeiten können. Sein Lieblingssong ist This Is Our Science von Astronautalis.
       sabine: Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Und sie erklärt uns die deutschen Asylgesetze. ihr Lieblingssong ist Vesna von Kino.
@@ -1635,6 +1657,7 @@ de:
         Antwort ist: Sehr schwer! Und damit war die Idee zu clarat geboren:
         Einfach Hilfe finden. Für Familien auf clarat family. Und für
         Flüchtlinge auf clarat refugees.
+      tian: Hat Wirtschaft studiert. Sie hat immer den Überblick und kann gut mit Zahlen umgehen. Bei clarat ist sie im Research-Team. Und sie kümmert sich um die Qualität unserer Arbeit. Ihr Lieblingssong ist Supergirl von Reamonn.
       tine: Ist Sozialpädagogin. Sie kann Menschen gut zuhören. Sie ist auch Schriftstellerin. Das heißt, sie kann gut schöne Geschichten schreiben. Bei clarat ist sie im Research-Team und Expertin für die clarat-Sprache. Ihr Lieblingssong ist Survive It von Ghostpoet.
       title: Über Uns
       verena: Studiert Gender Studies. Das heißt, sie weiß viel über die verschiedenen Geschlechter. Und über unsere Gesellschaft. Sie kann gut ordnen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Metropolis von Neonschwarz.
@@ -1826,6 +1849,7 @@ de:
     haeufige-fragen: haeufige-fragen
     home: home
     impressum: impressum
+    kontakt: kontakt
     liste: liste
     liste-de-services: liste-de-services
     new: new
@@ -1857,6 +1881,14 @@ de:
           family: Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder, Jugendliche und Familien suchen.
           refugees: Wenn du hier klickst, kommst du zu clarat Refugees. In clarat-refugees kannst du nach Hilfe für Flüchtlinge suchen.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
