--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -514,6 +514,7 @@ tr:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -524,12 +525,15 @@ tr:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -559,6 +563,7 @@ tr:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -567,6 +572,7 @@ tr:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -594,6 +600,8 @@ tr:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -749,10 +757,12 @@ tr:
         cze: Çekçe - čeština
         dan: Danimarka - Dansk
         deu: Almanca - Deutsch
+        dje: Zarma - Djerma
         dyu: Jula - Julakan
         ell: Yunanca - ελληνικά
         eng: İngilizce - English
         est: Estonyalı - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Ewondo - Ewondo
         fas: Farsça - فارسی
         fil: Filipince - Wikang Filipino
@@ -760,6 +770,7 @@ tr:
         fra: Fransızca - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: Gürcü - ქართული
         hau: Hausa - Hausanci
         hbs: Karadağca - Crnogorski jezik / Црногорски језик
@@ -861,6 +872,14 @@ tr:
             clarat.org adlı internet sayfamız henüz yenidir. Yakında başka şehirler için de yardım çeşitleri sunabileceğiz.
             Desteğinden ötürü mutlulu duyarız: Daha iyi yapabileceğimiz bir şey mi var? Ya da düzgün çalışmayan
             bir şey? o halde
+        popup:
+          button: 
+          email_placeholder: E-Mail Adresi *
+          footer: 
+          headline: 
+          message: Ich möchte an der Umfrage teilnehmen
+          name_placeholder: İsim *
+          text: 
         unavailable_location_modal: |
           Bulunduğun yer için clarat'ta şuan yalnızca telefon desteği ya da online yardımlar bulunmaktadır.
           Yani sana telefonda ya da online olarak yardım edilecektir.
@@ -1029,6 +1048,8 @@ tr:
       what:
         code_word: Ne sorman gerekir veya sitede neyi araman gerekir?
         heading: Konu nedir?
+        offertaxonomy:
+          heading: 
       who: Nerede yardım bulabilirim?
       who_contact_people:
         dr: Dr.
@@ -1108,6 +1129,7 @@ tr:
       michaela: 
       nahla: 
       nathalie: 
+      nicole: 
       nils: |
         Ist Informatiker. Das heißt, er kann gut Computerprogramme und
         Internetseiten programmieren. Ihm fällt immer eine gute Lösung ein und
@@ -1120,6 +1142,7 @@ tr:
       sophie: 
       stefan: bir kültürel çalışmalar uzmanı. Bu, kültürler ve toplum hakkında çok bilgiye sahip olduğu anlamına geliyor. İkna kabiliyeti oldukça yüksektir. Ayrıca clarat’ın mucididir. En sevdiği şarkı The Doors’un Riders On The Storm şarkısı.
       text: 'Clarat, kâr amacı gütmeyen bir vakıf olan Benckiser Stiftung Zukunft’un (www.benckiser-stiftung.org) gönüllü bir projesidir. Benckiser Vakfı ile yıllardan beri çocuk ve gençleri destekleme anlamında etkili projeler düzenlemekteyiz. Bu projeleri yürütürken bir şey dikkatimizi çekti: Destek bazında teklifler bulmak çok zor. Bu arada bir şey fark ettik ki; bizim gibi uzmanlar bile teklifleri bulmakta zorluk çekerse, yardıma ihtiyacı olan çocuklar, gençler ve aileler nasıl bir yol bulsunlar? Veya Almanya''daki günlük yaşam hakkında hiç bir şey bilmeyen mülteciler ne yapsın? Cevap: Çok zor! İşte tam da bu sebepten dolayı Clarat fikri doğdu: Yardıma ihtiyacı olanlara kolayca destek bulmak için. Ailevi konularda clarat family’ye, sığınma konuları hakkında clarat refugees’e başvurabilirsin.'
+      tian: 
       tine: bir sosyal pedagog. İnsanları dinlemesini çok iyi biliyor. Ayrıca kendisi bir yazar. Bu dile çok hâkim olduğu ve güzel hikayeler yazdığı anlamına geliyor. clarad’da araştırma ekibinde yer alıyor. En sevdiği şarkı Ghostpoet’ten Survive It şarkısı.
       title: Hakkımızda
       verena: bir siyaset bilimleri uzmanı. Bu, siyaset ve toplum hakkında çok bilgiye sahip olduğu anlamına geliyor. Bilgi edinme kabiliyeti çok yüksek. Clarat’da araştırma ekibinde yer alıyor ve ansiklopedimiz ile ilgileniyor. En sevdiği şarkı Oh Wonder’in Lose It şarkısı.
@@ -1294,6 +1317,7 @@ tr:
     haeufige-fragen: sıkça-sorulan-sorular
     home: 
     impressum: künye
+    kontakt: 
     liste: 
     liste-de-services: 
     new: yeni
@@ -1326,6 +1350,14 @@ tr:
           family: Buraya tıkladığında clarat Family erişebilirsin. clarat Family'de çocuklar, gençler ve aileler için destek arayabilirsin.
           refugees: Buraya tıkladığında clarat Refugees'e erişebilirsin. clarat Refugees'de mülteciler için destek arayabilirsin.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
