Update meta descriptions

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -748,10 +748,12 @@ ar:
         cze: لغة تشيكية - čeština
         dan: لغة دنماركية - Dansk
         deu: لغة ألمانية - Deutsch
+        dje: زارما - Djerma
         dyu: الديولا - Julakan
         ell: لغة يونانية - ελληνικά
         eng: لغة إنجليزية - English
         est: الإستونية - eesti keel
+        ewe: إيفي - Eʋegbe
         ewo: إيفوندو - Ewondo
         fas: لغة فارسية - فارسی
         fil: لغة فلبينية - Wikang Filipino
@@ -759,6 +761,7 @@ ar:
         fra: لغة فرنسية - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: جين  - Mina
         geo: الجورجية - ქართული
         hau: لغة هوسية - Hausanci
         hbs: لغة مونتنغرية - Crnogorski jezik / Црногорски језик
@@ -1125,6 +1128,7 @@ ar:
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
       marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
+      meta_description: 
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي Me in You ل.Convenience.
