--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -804,10 +804,12 @@ en:
         cze: Czech - čeština
         dan: Danish - Dansk
         deu: German - Deutsch
+        dje: Zarma - Djerma
         dyu: Jula - Julakan
         ell: Greek - ελληνικά
         eng: English
         est: Estonian - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Ewondo / Kolo - Ewondo
         fas: Persian (Farsi) - فارسی
         fil: Filipino - Wikang Filipino
@@ -815,6 +817,7 @@ en:
         fra: French - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: Georgian - ქართული
         hau: Hausa - Hausanci
         hbs: Montenegrin - Crnogorski jezik / Црногорски језик
@@ -1234,6 +1237,7 @@ en:
         the IT team. He ensures that our website looks good. His favourite song
         is “Hysteria” by MUSE.
       marie: Marie is an academic researcher into the fields of peace and conflict research. This means she knows a lot about conflict and war. She can gather and sort information quickly. She works in clarat's research team. Her favourite song is "Move On Up" by Curtis Mayfield.
+      meta_description: 
       michaela: Michaela studied commercial information technology. She's good at inspiring others. And she knows a lot about the media. She's part of the clarat research team. And she also makes sure our website is working properly. Her favourite song is "Digital Love" by Daft Punk.
       nahla: Nahla is an archaeologist. She knows a lot about human history. She can work very quickly. She's in the clarat translator team. She translates clarat into Arabic.  Her favourite song ist "Nassam Allina El Hawa" by Fayrouz.
       nathalie: Nathalie studied human rights and international politics. She can explain things well. And she's a good listener, too. She's part of the clarat research team. She makes sure our website is up-to-date. Her favourite song is "Me in You" by Kings of Convenience.
