--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -838,10 +838,12 @@ fr:
         cze: Tchèque - čeština
         dan: danois - Dansk
         deu: Allemand - Deutsch
+        dje: Zarma - Djerma
         dyu: dioula - julakan
         ell: Grec - ελληνικά
         eng: Anglais - English
         est: estonien - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Ewondo / kóló - Ewondo
         fas: Persan - فارسی
         fil: filipino - Wikang Filipino
@@ -849,6 +851,7 @@ fr:
         fra: Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: géorgien - ქართული
         hau: haoussa - Hausancī
         hbs: Monténégrin - Crnogorski jezik / Црногорски језик
@@ -1187,6 +1190,7 @@ fr:
       magdalena: 
       marcus: Est webdesigner. Ça signifie qu’il sait programmer et optimiser des sites internet. C’ est également un bon concepteur. Chez clarat, il est dans l’équipe TI. Et il fait en sorte que notre site Web soit joli. Sa chanson préférée est Hysteria de MUSE.
       marie: 
+      meta_description: 
       michaela: Elle a étudié les méthodes informatiques appliquées à la gestion. Elle sait susciter l'enthousiasme des autres. Elle est très familière avec les médias. Elle fait partie de l'équipe de recherche de clarat. Elle est responsable du bon fonctionnement de notre page web. Sa chanson préférée est Digital Love de Daft Punk.
       nahla: Elle est archéologue. Elle sait beaucoup de choses sur l'Histoire et l'humanité. Elle sait travailler vite. Elle fait partie de l'équipe de traducteurs de clarat et traduit en langue arabe. Sa chanson préférée est Nassam Allina El Hawa de Fayrouz.
       nathalie: Elle a étudié la politique internationale et les droits de l'homme. Elle sait bien expliquer et elle sait aussi bien écouter. Elle fait partie de l'équipe de recherche de clarat. Sa chanson préférée est Me in You des Kings of Convenience.
