--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -884,10 +884,12 @@ pl:
         cze: Język czeski - čeština
         dan: język duński - Dansk
         deu: Język niemiecki - Deutsch
+        dje: Zarma - Djerma
         dyu: Język diula - julakan
         ell: Język grecki - ελληνικά
         eng: Język angielski - English
         est: estoński - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Język yaunde - Ewondo
         fas: Język perski (farsi) - فارسی
         fil: filipino - Wikang Filipino
@@ -895,6 +897,7 @@ pl:
         fra: Język francuski - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: gruziński - ქართული
         hau: język hausa - Hausa
         hbs: Język czarnogórski - Crnogorski jezik / Црногорски језик
@@ -1239,6 +1242,7 @@ pl:
       magdalena: 
       marcus: Jest webdesignerem. To znaczy, że potrafi programować szatę graficzną stron internetowych. Potrafi też dobrze planować. W clarat jest w zespole IT. Dba o to, aby nasza strona internetowa dobrze wyglądała. Jego ulubionym utworem jest “Hysteria” zespolu Muse.
       marie: 
+      meta_description: 
       michaela: Studiowała informatykę gospodarczą. Potrafi zachwycić innych ludzi. Zna się dobrze na mediach. W clarat pracuje dla Research-Teamu. Troszczy się o to, by nasze strony internetowe dobrze funkcjonowały. Jej ulubionym utworem jest "Digital Love" zespołu Daft Punk.
       nahla: Jest archeologiem. Wie wiele o historii i człowieczeństwie. Potrafi szybko pracować. W clarat pracuje dla zespołu tłumaczeniowego i tłumaczy clarat na arabski. Jej ulubionym utworem jest "Nassam Allina El Hawa" zespołu Fayrouz.
       nathalie: Studiowała prawa człowieka i politykę międzynarodową. Potrafi dobrze tłumaczyć i świetnie słuchać. W clarat pracuje dla Research-Teamu. Jej ulubionym utworem jest "Me in You" zespołu Kings of Convienience.
