--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -757,10 +757,12 @@ tr:
         cze: Çekçe - čeština
         dan: Danimarka - Dansk
         deu: Almanca - Deutsch
+        dje: Zarma - Djerma
         dyu: Jula - Julakan
         ell: Yunanca - ελληνικά
         eng: İngilizce - English
         est: Estonyalı - eesti keel
+        ewe: Ewe - Eʋegbe
         ewo: Ewondo - Ewondo
         fas: Farsça - فارسی
         fil: Filipince - Wikang Filipino
@@ -768,6 +770,7 @@ tr:
         fra: Fransızca - Français
         fuf: Pular - Pular
         ful: Ful - Fulfulde
+        gen: Gen - Mina
         geo: Gürcü - ქართული
         hau: Hausa - Hausanci
         hbs: Karadağca - Crnogorski jezik / Црногорски језик
@@ -1123,6 +1126,7 @@ tr:
       magdalena: 
       marcus: bir web tasarımcısı. Bu, internet sayfaları programlayabildiği ve tasarlayabildiği anlamına geliyor. Aynı zamanda plan yapma yeteneği oldukça iyi. clarat’da IT ekibinde yer alıyor ve internet sayfamızın güzel görünmesini sağlıyor. En sevdiği şarkı Muse’un Hysteria şarkısı.
       marie: 
+      meta_description: 
       michaela: 
       nahla: 
       nathalie: 
